added a styling and logic for selecting black keys

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ code {
   padding: 10px;
 }
 
-.key {
+.white-key {
   cursor: pointer;
   font: 16px "Open Sans", "Lucida Grande", "Arial", sans-serif;
   border: 1px solid black;
@@ -51,15 +51,31 @@ code {
   -ms-user-select: none;
 }
 
-.key-label {
-  overflow-wrap: break-word;
+.black-key {
+  cursor: pointer;
+  font: 16px "Open Sans", "Lucida Grande", "Arial", sans-serif;
+  border: 1px solid black;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  width: 20px;
+  height: 80px;
+  text-align: center;
+  box-shadow: 2px 2px darkgrey;
+  display: inline-block;
+  position: relative;
+  margin-right: 3px;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 .keyboard-container {
   overflow-x: scroll;
   overflow-y: hidden;
-  width: 660px;
-  height: 110px;
+  width: 80%;
+  height: 80%;
   white-space: nowrap;
   margin: auto;
 }
