--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ code {
   text-align: center;
   border: 3px solid blue;
   padding: 10px;
+  font-family: 'Righteous';
 }
 
 .analyser-container {
